--- a/chat-websocket/index.html
+++ b/chat-websocket/index.html
@@ -24,7 +24,7 @@
 
   <div id="app" style="display: none;">
     <div id="topBar">
-      Sala: <span id="nomeSala">Nenhuma</span>
+     <span id="nomeSala">Nenhuma</span>
       <button id="btnSair">Sair</button>
     </div>
 
